get one trip
